# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# To regenerate this list, run:
# sed -i '/^[^#][^[]*$/d' wooeen_java_resources.gni
# (for f in $(find java/res_wooeen/*/ -type f); do echo '  "'$f'",'; done; echo ']') >> wooeen_java_resources.gni
# git cl format

wooeen_java_resources = [
  "java/res_wooeen/anim/fade_out.xml",
  "java/res_wooeen/anim/slide_out.xml",
  "java/res_wooeen/anim/slide_in.xml",
  "java/res_wooeen/anim/fade_in.xml",
  "java/res_wooeen/color/woe_btn_secondary_color.xml",
  "java/res_wooeen/color/woe_btn_primary_color.xml",
  "java/res_wooeen/drawable/woe_btn_social.xml",
  "java/res_wooeen/drawable/woe_btn_orange_clicked.xml",
  "java/res_wooeen/drawable/woe_btn_main_div_normal.xml",
  "java/res_wooeen/drawable/woe_btn_highlight.xml",
  "java/res_wooeen/drawable/woe_btn_highlight_disabled.xml",
  "java/res_wooeen/drawable/woe_btn_main_v2_orange_clicked.xml",
  "java/res_wooeen/drawable/woe_btn_primary.xml",
  "java/res_wooeen/drawable/woe_btn.xml",
  "java/res_wooeen/drawable/woe_btn_widget_clicked.xml",
  "java/res_wooeen/drawable/woe_menu_item_bg_clicked.xml",
  "java/res_wooeen/drawable/woe_btn_primary_clicked.xml",
  "java/res_wooeen/drawable/woe_btn_clicked.xml",
  "java/res_wooeen/drawable/woe_list_layout.xml",
  "java/res_wooeen/drawable/woe_dialog_panel.xml",
  "java/res_wooeen/drawable/woe_btn_primary_normal.xml",
  "java/res_wooeen/drawable/woe_btn_disabled.xml",
  "java/res_wooeen/drawable/woe_list_layout_coupon_full.xml",
  "java/res_wooeen/drawable/woe_btn_borded_disabled.xml",
  "java/res_wooeen/drawable/woe_btn_main_div.xml",
  "java/res_wooeen/drawable/woe_post_item_bg_clicked.xml",
  "java/res_wooeen/drawable/woe_btn_social_normal.xml",
  "java/res_wooeen/drawable/woe_btn_icon_clicked.xml",
  "java/res_wooeen/drawable/woe_offer_item_bg_clicked.xml",
  "java/res_wooeen/drawable/woe_btn_borded_clicked.xml",
  "java/res_wooeen/drawable/bg_games.png",
  "java/res_wooeen/drawable/woe_btn_main_disabled.xml",
  "java/res_wooeen/drawable/woe_btn_main_secondary_disabled.xml",
  "java/res_wooeen/drawable/woe_btn_link_transparent_clicked.xml",
  "java/res_wooeen/drawable/woe_btn_header_clicked.xml",
  "java/res_wooeen/drawable/woe_btn_normal.xml",
  "java/res_wooeen/drawable/woe_btn_main_secondary.xml",
  "java/res_wooeen/drawable/bg_buttons_blue.png",
  "java/res_wooeen/drawable/woe_btn_widget.xml",
  "java/res_wooeen/drawable/woe_menu_item_bg_selected.xml",
  "java/res_wooeen/drawable/woe_btn_link_normal.xml",
  "java/res_wooeen/drawable/woe_pub_star_fill.png",
  "java/res_wooeen/drawable/woe_btn_main_v2_orange.xml",
  "java/res_wooeen/drawable/woe_post_item_bg_normal.xml",
  "java/res_wooeen/drawable/woe_menu_item_bg_normal.xml",
  "java/res_wooeen/drawable/woe_social_bg.xml",
  "java/res_wooeen/drawable/ic_notifications_black_24dp.xml",
  "java/res_wooeen/drawable/woe_offer_item_bg.xml",
  "java/res_wooeen/drawable/woe_cashback_bg.xml",
  "java/res_wooeen/drawable/woe_btn_link_transparent.xml",
  "java/res_wooeen/drawable/bg_buttons_orange.png",
  "java/res_wooeen/drawable/woe_btn_main_clicked.xml",
  "java/res_wooeen/drawable/woe_rounded_bg.xml",
  "java/res_wooeen/drawable/woe_btn_social_clicked.xml",
  "java/res_wooeen/drawable/woe_btn_main_v2_green.xml",
  "java/res_wooeen/drawable/woe_widget_unselected.xml",
  "java/res_wooeen/drawable/notifications_background.xml",
  "java/res_wooeen/drawable/woe_edit.xml",
  "java/res_wooeen/drawable/woe_btn_orange_normal.xml",
  "java/res_wooeen/drawable/ic_home_black_24dp.xml",
  "java/res_wooeen/drawable/woe_btn_icon_normal.xml",
  "java/res_wooeen/drawable/woe_btn_borded.xml",
  "java/res_wooeen/drawable/woe_btn_main_v2_blue.xml",
  "java/res_wooeen/drawable/woe_pub_head.xml",
  "java/res_wooeen/drawable/woe_coupon_voucher_bg.xml",
  "java/res_wooeen/drawable/woe_rounded_border.xml",
  "java/res_wooeen/drawable/woe_list_layout_border.xml",
  "java/res_wooeen/drawable/woe_edit_clicked.xml",
  "java/res_wooeen/drawable/woe_edit_main_clicked.xml",
  "java/res_wooeen/drawable/bg_buttons_green.png",
  "java/res_wooeen/drawable/woe_post_item_bg.xml",
  "java/res_wooeen/drawable/woe_btn_main_v2_blue_clicked.xml",
  "java/res_wooeen/drawable/woe_rounded_fg.xml",
  "java/res_wooeen/drawable/woe_btn_orange.xml",
  "java/res_wooeen/drawable/woe_btn_link_clicked.xml",
  "java/res_wooeen/drawable/woe_pub_star_empty.png",
  "java/res_wooeen/drawable/woe_btn_icon_disabled.xml",
  "java/res_wooeen/drawable/bg_dialog_update.png",
  "java/res_wooeen/drawable/woe_btn_highlight_clicked.xml",
  "java/res_wooeen/drawable/woe_tab_item_bg_clicked.xml",
  "java/res_wooeen/drawable/woe_btn_social_activated.xml",
  "java/res_wooeen/drawable/woe_btn_link.xml",
  "java/res_wooeen/drawable/ic_launcher_background.xml",
  "java/res_wooeen/drawable/woe_pub_item_bg_normal.xml",
  "java/res_wooeen/drawable/woe_line_strike.xml",
  "java/res_wooeen/drawable/woe_rounded_transparent.xml",
  "java/res_wooeen/drawable/woe_btn_highlight_normal.xml",
  "java/res_wooeen/drawable/woe_btn_widget_normal.xml",
  "java/res_wooeen/drawable/woe_pub_offer_image_bg.xml",
  "java/res_wooeen/drawable/woe_widget_div_bg.xml",
  "java/res_wooeen/drawable/woe_btn_main_secondary_clicked.xml",
  "java/res_wooeen/drawable/woe_btn_main_div_clicked.xml",
  "java/res_wooeen/drawable/woe_btn_main_v2_green_clicked.xml",
  "java/res_wooeen/drawable/woe_btn_header_normal.xml",
  "java/res_wooeen/drawable/woe_rounded_fg_dark.xml",
  "java/res_wooeen/drawable/woe_ntp_button_bg.xml",
  "java/res_wooeen/drawable/woe_btn_borded_normal.xml",
  "java/res_wooeen/drawable/woe_search_btn_normal.xml",
  "java/res_wooeen/drawable/woe_btn_icon.xml",
  "java/res_wooeen/drawable/woe_btn_secondary_clicked.xml",
  "java/res_wooeen/drawable/woe_pub_link_bg.xml",
  "java/res_wooeen/drawable/woe_btn_main_secondary_normal.xml",
  "java/res_wooeen/drawable/woe_tab_item_bg.xml",
  "java/res_wooeen/drawable/woe_pub_ad_bg.xml",
  "java/res_wooeen/drawable/woe_bg_primary.xml",
  "java/res_wooeen/drawable/woe_tag_divider.xml",
  "java/res_wooeen/drawable/woe_tab_item_bg_normal.xml",
  "java/res_wooeen/drawable/woe_stars.xml",
  "java/res_wooeen/drawable/woe_list_layout_transparent.xml",
  "java/res_wooeen/drawable/woe_line_text.xml",
  "java/res_wooeen/drawable/woe_widget_item_row_bg.xml",
  "java/res_wooeen/drawable/woe_btn_main_normal.xml",
  "java/res_wooeen/drawable/woe_menu_item_bg.xml",
  "java/res_wooeen/drawable/woe_btn_header.xml",
  "java/res_wooeen/drawable/woe_radius.xml",
  "java/res_wooeen/drawable/woe_tag_bg.xml",
  "java/res_wooeen/drawable/woe_tab_item_bg_selected.xml",
  "java/res_wooeen/drawable/ntp_search_box_bg.xml",
  "java/res_wooeen/drawable/woe_btn_secondary_normal.xml",
  "java/res_wooeen/drawable/woe_list_layout_coupon_right.xml",
  "java/res_wooeen/drawable/woe_list_layout_coupon.xml",
  "java/res_wooeen/drawable/woe_edit_normal.xml",
  "java/res_wooeen/drawable/woe_pub_offer_bg.xml",
  "java/res_wooeen/drawable/bg_ntp_update.png",
  "java/res_wooeen/drawable/woe_discount_bg.xml",
  "java/res_wooeen/drawable/woe_offer_item_bg_normal.xml",
  "java/res_wooeen/drawable/ic_dashboard_black_24dp.xml",
  "java/res_wooeen/drawable/woe_btn_main.xml",
  "java/res_wooeen/drawable/woe_btn_secondary.xml",
  "java/res_wooeen/drawable-hdpi/woe_no_image_person.png",
  "java/res_wooeen/drawable-hdpi/woe_share.png",
  "java/res_wooeen/drawable-hdpi/woe_user_menu_item_logout.png",
  "java/res_wooeen/drawable-hdpi/woe_widgets_recommendations.png",
  "java/res_wooeen/drawable-hdpi/woe_slide_second.png",
  "java/res_wooeen/drawable-hdpi/woe_cashback_white.png",
  "java/res_wooeen/drawable-hdpi/woe_slide_third.png",
  "java/res_wooeen/drawable-hdpi/woe_advertisers.png",
  "java/res_wooeen/drawable-hdpi/woe_banner_1.png",
  "java/res_wooeen/drawable-hdpi/woe_user_menu_item_blog.png",
  "java/res_wooeen/drawable-hdpi/woe_user_menu_item_my_cashback.png",
  "java/res_wooeen/drawable-hdpi/woe_challenges_white.png",
  "java/res_wooeen/drawable-hdpi/woe_arrow_right_long_white.png",
  "java/res_wooeen/drawable-hdpi/btn_wooeen_off.png",
  "java/res_wooeen/drawable-hdpi/woe_copy.png",
  "java/res_wooeen/drawable-hdpi/woe_filter.png",
  "java/res_wooeen/drawable-hdpi/woe_user_menu_item_company.png",
  "java/res_wooeen/drawable-hdpi/woe_more.png",
  "java/res_wooeen/drawable-hdpi/btn_toolbar_woe.png",
  "java/res_wooeen/drawable-hdpi/woe_copy_white.png",
  "java/res_wooeen/drawable-hdpi/woe_pub_offer_cashback.png",
  "java/res_wooeen/drawable-hdpi/woe_favicon.png",
  "java/res_wooeen/drawable-hdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-hdpi/woe_user_menu_item_share.png",
  "java/res_wooeen/drawable-hdpi/btn_wooeen.png",
  "java/res_wooeen/drawable-hdpi/woe_slide_fourth.png",
  "java/res_wooeen/drawable-hdpi/woe_pub_comment.png",
  "java/res_wooeen/drawable-hdpi/ic_wooeen_chrome.png",
  "java/res_wooeen/drawable-hdpi/woe_widgets_cashback.png",
  "java/res_wooeen/drawable-hdpi/ic_wooeen_push.png",
  "java/res_wooeen/drawable-hdpi/woe_share_purple.png",
  "java/res_wooeen/drawable-hdpi/btn_toolbar_active_woe.png",
  "java/res_wooeen/drawable-hdpi/woe_user_menu_item_tasks.png",
  "java/res_wooeen/drawable-hdpi/woe_close_gray.png",
  "java/res_wooeen/drawable-hdpi/woe_user_menu_item_advertisers.png",
  "java/res_wooeen/drawable-hdpi/woe_close.png",
  "java/res_wooeen/drawable-hdpi/btn_wooeen_donation.png",
  "java/res_wooeen/drawable-hdpi/woe_user_menu_item_next.png",
  "java/res_wooeen/drawable-hdpi/woe_stopwatch_blue.png",
  "java/res_wooeen/drawable-hdpi/woe_user_menu_item_my_data.png",
  "java/res_wooeen/drawable-hdpi/woe_pub_task_tag.png",
  "java/res_wooeen/drawable-hdpi/woe_user_menu_item_pubs.png",
  "java/res_wooeen/drawable-hdpi/woe_search.png",
  "java/res_wooeen/drawable-hdpi/woe_ic_head_company.png",
  "java/res_wooeen/drawable-hdpi/woe_pub_share.png",
  "java/res_wooeen/drawable-hdpi/woe_pub_more.png",
  "java/res_wooeen/drawable-hdpi/woe_arrow_right_long_red.png",
  "java/res_wooeen/drawable-hdpi/woe_widgets_aff.png",
  "java/res_wooeen/drawable-hdpi/woe_share_main.png",
  "java/res_wooeen/drawable-hdpi/woe_widgets_balance.png",
  "java/res_wooeen/drawable-hdpi/woe_arrow_right_long_gray.png",
  "java/res_wooeen/drawable-hdpi/woe_pub_like.png",
  "java/res_wooeen/drawable-hdpi/woe_help_bg.png",
  "java/res_wooeen/drawable-hdpi/woe_user_menu_item_history.png",
  "java/res_wooeen/drawable-hdpi/woe_pub_offer_social.png",
  "java/res_wooeen/drawable-hdpi/woe_whats_button.png",
  "java/res_wooeen/drawable-hdpi/woe_user_menu_item_favorite.png",
  "java/res_wooeen/drawable-hdpi/wooeen_logo_wb.png",
  "java/res_wooeen/drawable-hdpi/wooeen_logo_white.png",
  "java/res_wooeen/drawable-hdpi/woe_advertisers_white.png",
  "java/res_wooeen/drawable-hdpi/woe_menu.png",
  "java/res_wooeen/drawable-hdpi/woe_ic_head_user.png",
  "java/res_wooeen/drawable-hdpi/woe_user_menu_item_preferences.png",
  "java/res_wooeen/drawable-hdpi/woe_whats.png",
  "java/res_wooeen/drawable-mdpi/woe_no_image_person.png",
  "java/res_wooeen/drawable-mdpi/woe_share.png",
  "java/res_wooeen/drawable-mdpi/woe_user_menu_item_logout.png",
  "java/res_wooeen/drawable-mdpi/woe_widgets_recommendations.png",
  "java/res_wooeen/drawable-mdpi/woe_slide_second.png",
  "java/res_wooeen/drawable-mdpi/woe_cashback_white.png",
  "java/res_wooeen/drawable-mdpi/woe_slide_third.png",
  "java/res_wooeen/drawable-mdpi/woe_advertisers.png",
  "java/res_wooeen/drawable-mdpi/woe_banner_1.png",
  "java/res_wooeen/drawable-mdpi/woe_user_menu_item_blog.png",
  "java/res_wooeen/drawable-mdpi/woe_user_menu_item_my_cashback.png",
  "java/res_wooeen/drawable-mdpi/woe_challenges_white.png",
  "java/res_wooeen/drawable-mdpi/woe_arrow_right_long_white.png",
  "java/res_wooeen/drawable-mdpi/btn_wooeen_off.png",
  "java/res_wooeen/drawable-mdpi/woe_copy.png",
  "java/res_wooeen/drawable-mdpi/woe_filter.png",
  "java/res_wooeen/drawable-mdpi/woe_user_menu_item_company.png",
  "java/res_wooeen/drawable-mdpi/woe_more.png",
  "java/res_wooeen/drawable-mdpi/btn_toolbar_woe.png",
  "java/res_wooeen/drawable-mdpi/woe_copy_white.png",
  "java/res_wooeen/drawable-mdpi/woe_pub_offer_cashback.png",
  "java/res_wooeen/drawable-mdpi/woe_favicon.png",
  "java/res_wooeen/drawable-mdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-mdpi/woe_user_menu_item_share.png",
  "java/res_wooeen/drawable-mdpi/btn_wooeen.png",
  "java/res_wooeen/drawable-mdpi/woe_slide_fourth.png",
  "java/res_wooeen/drawable-mdpi/woe_pub_comment.png",
  "java/res_wooeen/drawable-mdpi/ic_wooeen_chrome.png",
  "java/res_wooeen/drawable-mdpi/woe_widgets_cashback.png",
  "java/res_wooeen/drawable-mdpi/ic_wooeen_push.png",
  "java/res_wooeen/drawable-mdpi/woe_share_purple.png",
  "java/res_wooeen/drawable-mdpi/btn_toolbar_active_woe.png",
  "java/res_wooeen/drawable-mdpi/woe_user_menu_item_tasks.png",
  "java/res_wooeen/drawable-mdpi/woe_close_gray.png",
  "java/res_wooeen/drawable-mdpi/woe_user_menu_item_advertisers.png",
  "java/res_wooeen/drawable-mdpi/woe_close.png",
  "java/res_wooeen/drawable-mdpi/btn_wooeen_donation.png",
  "java/res_wooeen/drawable-mdpi/woe_user_menu_item_next.png",
  "java/res_wooeen/drawable-mdpi/woe_stopwatch_blue.png",
  "java/res_wooeen/drawable-mdpi/woe_user_menu_item_my_data.png",
  "java/res_wooeen/drawable-mdpi/woe_pub_task_tag.png",
  "java/res_wooeen/drawable-mdpi/woe_user_menu_item_pubs.png",
  "java/res_wooeen/drawable-mdpi/woe_search.png",
  "java/res_wooeen/drawable-mdpi/woe_ic_head_company.png",
  "java/res_wooeen/drawable-mdpi/woe_pub_share.png",
  "java/res_wooeen/drawable-mdpi/woe_pub_more.png",
  "java/res_wooeen/drawable-mdpi/woe_arrow_right_long_red.png",
  "java/res_wooeen/drawable-mdpi/woe_widgets_aff.png",
  "java/res_wooeen/drawable-mdpi/woe_share_main.png",
  "java/res_wooeen/drawable-mdpi/woe_widgets_balance.png",
  "java/res_wooeen/drawable-mdpi/woe_arrow_right_long_gray.png",
  "java/res_wooeen/drawable-mdpi/woe_pub_like.png",
  "java/res_wooeen/drawable-mdpi/woe_help_bg.png",
  "java/res_wooeen/drawable-mdpi/woe_user_menu_item_history.png",
  "java/res_wooeen/drawable-mdpi/woe_pub_offer_social.png",
  "java/res_wooeen/drawable-mdpi/woe_whats_button.png",
  "java/res_wooeen/drawable-mdpi/woe_user_menu_item_favorite.png",
  "java/res_wooeen/drawable-mdpi/wooeen_logo_wb.png",
  "java/res_wooeen/drawable-mdpi/wooeen_logo_white.png",
  "java/res_wooeen/drawable-mdpi/woe_advertisers_white.png",
  "java/res_wooeen/drawable-mdpi/woe_menu.png",
  "java/res_wooeen/drawable-mdpi/woe_ic_head_user.png",
  "java/res_wooeen/drawable-mdpi/woe_user_menu_item_preferences.png",
  "java/res_wooeen/drawable-mdpi/woe_whats.png",
  "java/res_wooeen/drawable-night/woe_bg_primary.xml",
  "java/res_wooeen/drawable-night-hdpi/woe_share.png",
  "java/res_wooeen/drawable-night-hdpi/woe_user_menu_item_logout.png",
  "java/res_wooeen/drawable-night-hdpi/woe_widgets_recommendations.png",
  "java/res_wooeen/drawable-night-hdpi/woe_advertisers.png",
  "java/res_wooeen/drawable-night-hdpi/woe_user_menu_item_blog.png",
  "java/res_wooeen/drawable-night-hdpi/woe_user_menu_item_my_cashback.png",
  "java/res_wooeen/drawable-night-hdpi/woe_copy.png",
  "java/res_wooeen/drawable-night-hdpi/woe_user_menu_item_company.png",
  "java/res_wooeen/drawable-night-hdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-night-hdpi/woe_user_menu_item_share.png",
  "java/res_wooeen/drawable-night-hdpi/woe_pub_comment.png",
  "java/res_wooeen/drawable-night-hdpi/woe_widgets_cashback.png",
  "java/res_wooeen/drawable-night-hdpi/woe_share_purple.png",
  "java/res_wooeen/drawable-night-hdpi/woe_user_menu_item_tasks.png",
  "java/res_wooeen/drawable-night-hdpi/woe_user_menu_item_advertisers.png",
  "java/res_wooeen/drawable-night-hdpi/woe_close.png",
  "java/res_wooeen/drawable-night-hdpi/woe_user_menu_item_next.png",
  "java/res_wooeen/drawable-night-hdpi/woe_user_menu_item_my_data.png",
  "java/res_wooeen/drawable-night-hdpi/woe_user_menu_item_pubs.png",
  "java/res_wooeen/drawable-night-hdpi/woe_ic_head_company.png",
  "java/res_wooeen/drawable-night-hdpi/woe_pub_share.png",
  "java/res_wooeen/drawable-night-hdpi/woe_pub_more.png",
  "java/res_wooeen/drawable-night-hdpi/woe_widgets_aff.png",
  "java/res_wooeen/drawable-night-hdpi/woe_widgets_balance.png",
  "java/res_wooeen/drawable-night-hdpi/woe_arrow_right_long_gray.png",
  "java/res_wooeen/drawable-night-hdpi/woe_pub_like.png",
  "java/res_wooeen/drawable-night-hdpi/woe_user_menu_item_history.png",
  "java/res_wooeen/drawable-night-hdpi/woe_user_menu_item_favorite.png",
  "java/res_wooeen/drawable-night-hdpi/woe_menu.png",
  "java/res_wooeen/drawable-night-hdpi/woe_ic_head_user.png",
  "java/res_wooeen/drawable-night-hdpi/woe_user_menu_item_preferences.png",
  "java/res_wooeen/drawable-night-mdpi/woe_share.png",
  "java/res_wooeen/drawable-night-mdpi/woe_user_menu_item_logout.png",
  "java/res_wooeen/drawable-night-mdpi/woe_widgets_recommendations.png",
  "java/res_wooeen/drawable-night-mdpi/woe_advertisers.png",
  "java/res_wooeen/drawable-night-mdpi/woe_user_menu_item_blog.png",
  "java/res_wooeen/drawable-night-mdpi/woe_user_menu_item_my_cashback.png",
  "java/res_wooeen/drawable-night-mdpi/woe_copy.png",
  "java/res_wooeen/drawable-night-mdpi/woe_user_menu_item_company.png",
  "java/res_wooeen/drawable-night-mdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-night-mdpi/woe_user_menu_item_share.png",
  "java/res_wooeen/drawable-night-mdpi/woe_pub_comment.png",
  "java/res_wooeen/drawable-night-mdpi/woe_widgets_cashback.png",
  "java/res_wooeen/drawable-night-mdpi/woe_share_purple.png",
  "java/res_wooeen/drawable-night-mdpi/woe_user_menu_item_tasks.png",
  "java/res_wooeen/drawable-night-mdpi/woe_user_menu_item_advertisers.png",
  "java/res_wooeen/drawable-night-mdpi/woe_close.png",
  "java/res_wooeen/drawable-night-mdpi/woe_user_menu_item_next.png",
  "java/res_wooeen/drawable-night-mdpi/woe_user_menu_item_my_data.png",
  "java/res_wooeen/drawable-night-mdpi/woe_user_menu_item_pubs.png",
  "java/res_wooeen/drawable-night-mdpi/woe_ic_head_company.png",
  "java/res_wooeen/drawable-night-mdpi/woe_pub_share.png",
  "java/res_wooeen/drawable-night-mdpi/woe_pub_more.png",
  "java/res_wooeen/drawable-night-mdpi/woe_widgets_aff.png",
  "java/res_wooeen/drawable-night-mdpi/woe_widgets_balance.png",
  "java/res_wooeen/drawable-night-mdpi/woe_arrow_right_long_gray.png",
  "java/res_wooeen/drawable-night-mdpi/woe_pub_like.png",
  "java/res_wooeen/drawable-night-mdpi/woe_user_menu_item_history.png",
  "java/res_wooeen/drawable-night-mdpi/woe_user_menu_item_favorite.png",
  "java/res_wooeen/drawable-night-mdpi/woe_menu.png",
  "java/res_wooeen/drawable-night-mdpi/woe_ic_head_user.png",
  "java/res_wooeen/drawable-night-mdpi/woe_user_menu_item_preferences.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_share.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_user_menu_item_logout.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_widgets_recommendations.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_advertisers.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_user_menu_item_blog.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_user_menu_item_my_cashback.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_copy.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_user_menu_item_company.png",
  "java/res_wooeen/drawable-night-xhdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_user_menu_item_share.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_pub_comment.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_widgets_cashback.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_share_purple.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_user_menu_item_tasks.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_user_menu_item_advertisers.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_close.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_user_menu_item_next.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_user_menu_item_my_data.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_user_menu_item_pubs.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_ic_head_company.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_pub_share.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_pub_more.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_widgets_aff.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_widgets_balance.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_arrow_right_long_gray.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_pub_like.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_user_menu_item_history.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_user_menu_item_favorite.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_menu.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_ic_head_user.png",
  "java/res_wooeen/drawable-night-xhdpi/woe_user_menu_item_preferences.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_share.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_user_menu_item_logout.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_widgets_recommendations.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_advertisers.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_user_menu_item_blog.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_user_menu_item_my_cashback.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_copy.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_user_menu_item_company.png",
  "java/res_wooeen/drawable-night-xxhdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_user_menu_item_share.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_pub_comment.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_widgets_cashback.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_share_purple.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_user_menu_item_tasks.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_user_menu_item_advertisers.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_close.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_user_menu_item_next.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_user_menu_item_my_data.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_user_menu_item_pubs.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_ic_head_company.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_pub_share.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_pub_more.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_widgets_aff.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_widgets_balance.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_arrow_right_long_gray.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_pub_like.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_user_menu_item_history.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_user_menu_item_favorite.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_menu.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_ic_head_user.png",
  "java/res_wooeen/drawable-night-xxhdpi/woe_user_menu_item_preferences.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_share.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_user_menu_item_logout.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_widgets_recommendations.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_advertisers.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_user_menu_item_blog.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_user_menu_item_my_cashback.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_copy.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_user_menu_item_company.png",
  "java/res_wooeen/drawable-night-xxxhdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_user_menu_item_share.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_pub_comment.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_widgets_cashback.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_share_purple.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_user_menu_item_tasks.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_user_menu_item_advertisers.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_close.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_user_menu_item_next.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_user_menu_item_my_data.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_user_menu_item_pubs.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_ic_head_company.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_pub_share.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_pub_more.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_widgets_aff.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_widgets_balance.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_arrow_right_long_gray.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_pub_like.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_user_menu_item_history.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_user_menu_item_favorite.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_menu.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_ic_head_user.png",
  "java/res_wooeen/drawable-night-xxxhdpi/woe_user_menu_item_preferences.png",
  "java/res_wooeen/drawable-sw600dp-hdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-sw600dp-hdpi/wooeen_logo_wb.png",
  "java/res_wooeen/drawable-sw600dp-hdpi/wooeen_logo_white.png",
  "java/res_wooeen/drawable-sw600dp-mdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-sw600dp-mdpi/wooeen_logo_wb.png",
  "java/res_wooeen/drawable-sw600dp-mdpi/wooeen_logo_white.png",
  "java/res_wooeen/drawable-sw600dp-xhdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-sw600dp-xhdpi/wooeen_logo_wb.png",
  "java/res_wooeen/drawable-sw600dp-xhdpi/wooeen_logo_white.png",
  "java/res_wooeen/drawable-sw600dp-xxhdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-sw600dp-xxhdpi/wooeen_logo_wb.png",
  "java/res_wooeen/drawable-sw600dp-xxhdpi/wooeen_logo_white.png",
  "java/res_wooeen/drawable-sw600dp-xxxhdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-sw600dp-xxxhdpi/wooeen_logo_wb.png",
  "java/res_wooeen/drawable-sw600dp-xxxhdpi/wooeen_logo_white.png",
  "java/res_wooeen/drawable-xhdpi/woe_no_image_person.png",
  "java/res_wooeen/drawable-xhdpi/woe_share.png",
  "java/res_wooeen/drawable-xhdpi/woe_user_menu_item_logout.png",
  "java/res_wooeen/drawable-xhdpi/woe_widgets_recommendations.png",
  "java/res_wooeen/drawable-xhdpi/woe_slide_second.png",
  "java/res_wooeen/drawable-xhdpi/woe_cashback_white.png",
  "java/res_wooeen/drawable-xhdpi/woe_slide_third.png",
  "java/res_wooeen/drawable-xhdpi/woe_advertisers.png",
  "java/res_wooeen/drawable-xhdpi/woe_banner_1.png",
  "java/res_wooeen/drawable-xhdpi/woe_user_menu_item_blog.png",
  "java/res_wooeen/drawable-xhdpi/woe_user_menu_item_my_cashback.png",
  "java/res_wooeen/drawable-xhdpi/woe_challenges_white.png",
  "java/res_wooeen/drawable-xhdpi/woe_arrow_right_long_white.png",
  "java/res_wooeen/drawable-xhdpi/btn_wooeen_off.png",
  "java/res_wooeen/drawable-xhdpi/woe_copy.png",
  "java/res_wooeen/drawable-xhdpi/woe_filter.png",
  "java/res_wooeen/drawable-xhdpi/woe_user_menu_item_company.png",
  "java/res_wooeen/drawable-xhdpi/woe_more.png",
  "java/res_wooeen/drawable-xhdpi/btn_toolbar_woe.png",
  "java/res_wooeen/drawable-xhdpi/woe_copy_white.png",
  "java/res_wooeen/drawable-xhdpi/woe_pub_offer_cashback.png",
  "java/res_wooeen/drawable-xhdpi/woe_favicon.png",
  "java/res_wooeen/drawable-xhdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-xhdpi/woe_user_menu_item_share.png",
  "java/res_wooeen/drawable-xhdpi/btn_wooeen.png",
  "java/res_wooeen/drawable-xhdpi/woe_slide_fourth.png",
  "java/res_wooeen/drawable-xhdpi/woe_pub_comment.png",
  "java/res_wooeen/drawable-xhdpi/ic_wooeen_chrome.png",
  "java/res_wooeen/drawable-xhdpi/woe_widgets_cashback.png",
  "java/res_wooeen/drawable-xhdpi/ic_wooeen_push.png",
  "java/res_wooeen/drawable-xhdpi/woe_share_purple.png",
  "java/res_wooeen/drawable-xhdpi/btn_toolbar_active_woe.png",
  "java/res_wooeen/drawable-xhdpi/woe_user_menu_item_tasks.png",
  "java/res_wooeen/drawable-xhdpi/woe_close_gray.png",
  "java/res_wooeen/drawable-xhdpi/woe_user_menu_item_advertisers.png",
  "java/res_wooeen/drawable-xhdpi/woe_close.png",
  "java/res_wooeen/drawable-xhdpi/btn_wooeen_donation.png",
  "java/res_wooeen/drawable-xhdpi/woe_user_menu_item_next.png",
  "java/res_wooeen/drawable-xhdpi/woe_stopwatch_blue.png",
  "java/res_wooeen/drawable-xhdpi/woe_user_menu_item_my_data.png",
  "java/res_wooeen/drawable-xhdpi/woe_pub_task_tag.png",
  "java/res_wooeen/drawable-xhdpi/woe_user_menu_item_pubs.png",
  "java/res_wooeen/drawable-xhdpi/woe_search.png",
  "java/res_wooeen/drawable-xhdpi/woe_ic_head_company.png",
  "java/res_wooeen/drawable-xhdpi/woe_pub_share.png",
  "java/res_wooeen/drawable-xhdpi/woe_pub_more.png",
  "java/res_wooeen/drawable-xhdpi/woe_arrow_right_long_red.png",
  "java/res_wooeen/drawable-xhdpi/woe_widgets_aff.png",
  "java/res_wooeen/drawable-xhdpi/woe_share_main.png",
  "java/res_wooeen/drawable-xhdpi/woe_widgets_balance.png",
  "java/res_wooeen/drawable-xhdpi/woe_arrow_right_long_gray.png",
  "java/res_wooeen/drawable-xhdpi/woe_pub_like.png",
  "java/res_wooeen/drawable-xhdpi/woe_help_bg.png",
  "java/res_wooeen/drawable-xhdpi/woe_user_menu_item_history.png",
  "java/res_wooeen/drawable-xhdpi/woe_pub_offer_social.png",
  "java/res_wooeen/drawable-xhdpi/woe_whats_button.png",
  "java/res_wooeen/drawable-xhdpi/woe_user_menu_item_favorite.png",
  "java/res_wooeen/drawable-xhdpi/wooeen_logo_wb.png",
  "java/res_wooeen/drawable-xhdpi/wooeen_logo_white.png",
  "java/res_wooeen/drawable-xhdpi/woe_advertisers_white.png",
  "java/res_wooeen/drawable-xhdpi/woe_menu.png",
  "java/res_wooeen/drawable-xhdpi/woe_ic_head_user.png",
  "java/res_wooeen/drawable-xhdpi/woe_user_menu_item_preferences.png",
  "java/res_wooeen/drawable-xhdpi/woe_whats.png",
  "java/res_wooeen/drawable-xxhdpi/woe_no_image_person.png",
  "java/res_wooeen/drawable-xxhdpi/woe_share.png",
  "java/res_wooeen/drawable-xxhdpi/woe_user_menu_item_logout.png",
  "java/res_wooeen/drawable-xxhdpi/woe_widgets_recommendations.png",
  "java/res_wooeen/drawable-xxhdpi/woe_slide_second.png",
  "java/res_wooeen/drawable-xxhdpi/woe_cashback_white.png",
  "java/res_wooeen/drawable-xxhdpi/woe_slide_third.png",
  "java/res_wooeen/drawable-xxhdpi/woe_advertisers.png",
  "java/res_wooeen/drawable-xxhdpi/woe_banner_1.png",
  "java/res_wooeen/drawable-xxhdpi/woe_user_menu_item_blog.png",
  "java/res_wooeen/drawable-xxhdpi/woe_user_menu_item_my_cashback.png",
  "java/res_wooeen/drawable-xxhdpi/woe_challenges_white.png",
  "java/res_wooeen/drawable-xxhdpi/woe_arrow_right_long_white.png",
  "java/res_wooeen/drawable-xxhdpi/btn_wooeen_off.png",
  "java/res_wooeen/drawable-xxhdpi/woe_copy.png",
  "java/res_wooeen/drawable-xxhdpi/woe_filter.png",
  "java/res_wooeen/drawable-xxhdpi/woe_user_menu_item_company.png",
  "java/res_wooeen/drawable-xxhdpi/woe_more.png",
  "java/res_wooeen/drawable-xxhdpi/btn_toolbar_woe.png",
  "java/res_wooeen/drawable-xxhdpi/woe_copy_white.png",
  "java/res_wooeen/drawable-xxhdpi/woe_pub_offer_cashback.png",
  "java/res_wooeen/drawable-xxhdpi/woe_favicon.png",
  "java/res_wooeen/drawable-xxhdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-xxhdpi/woe_user_menu_item_share.png",
  "java/res_wooeen/drawable-xxhdpi/btn_wooeen.png",
  "java/res_wooeen/drawable-xxhdpi/woe_slide_fourth.png",
  "java/res_wooeen/drawable-xxhdpi/woe_pub_comment.png",
  "java/res_wooeen/drawable-xxhdpi/ic_wooeen_chrome.png",
  "java/res_wooeen/drawable-xxhdpi/woe_widgets_cashback.png",
  "java/res_wooeen/drawable-xxhdpi/ic_wooeen_push.png",
  "java/res_wooeen/drawable-xxhdpi/woe_share_purple.png",
  "java/res_wooeen/drawable-xxhdpi/btn_toolbar_active_woe.png",
  "java/res_wooeen/drawable-xxhdpi/woe_user_menu_item_tasks.png",
  "java/res_wooeen/drawable-xxhdpi/woe_close_gray.png",
  "java/res_wooeen/drawable-xxhdpi/woe_user_menu_item_advertisers.png",
  "java/res_wooeen/drawable-xxhdpi/woe_close.png",
  "java/res_wooeen/drawable-xxhdpi/btn_wooeen_donation.png",
  "java/res_wooeen/drawable-xxhdpi/woe_user_menu_item_next.png",
  "java/res_wooeen/drawable-xxhdpi/woe_stopwatch_blue.png",
  "java/res_wooeen/drawable-xxhdpi/woe_user_menu_item_my_data.png",
  "java/res_wooeen/drawable-xxhdpi/woe_pub_task_tag.png",
  "java/res_wooeen/drawable-xxhdpi/woe_user_menu_item_pubs.png",
  "java/res_wooeen/drawable-xxhdpi/woe_search.png",
  "java/res_wooeen/drawable-xxhdpi/woe_ic_head_company.png",
  "java/res_wooeen/drawable-xxhdpi/woe_pub_share.png",
  "java/res_wooeen/drawable-xxhdpi/woe_pub_more.png",
  "java/res_wooeen/drawable-xxhdpi/woe_arrow_right_long_red.png",
  "java/res_wooeen/drawable-xxhdpi/woe_widgets_aff.png",
  "java/res_wooeen/drawable-xxhdpi/woe_share_main.png",
  "java/res_wooeen/drawable-xxhdpi/woe_widgets_balance.png",
  "java/res_wooeen/drawable-xxhdpi/woe_arrow_right_long_gray.png",
  "java/res_wooeen/drawable-xxhdpi/woe_pub_like.png",
  "java/res_wooeen/drawable-xxhdpi/woe_help_bg.png",
  "java/res_wooeen/drawable-xxhdpi/woe_user_menu_item_history.png",
  "java/res_wooeen/drawable-xxhdpi/woe_pub_offer_social.png",
  "java/res_wooeen/drawable-xxhdpi/woe_whats_button.png",
  "java/res_wooeen/drawable-xxhdpi/woe_user_menu_item_favorite.png",
  "java/res_wooeen/drawable-xxhdpi/wooeen_logo_wb.png",
  "java/res_wooeen/drawable-xxhdpi/wooeen_logo_white.png",
  "java/res_wooeen/drawable-xxhdpi/woe_advertisers_white.png",
  "java/res_wooeen/drawable-xxhdpi/woe_menu.png",
  "java/res_wooeen/drawable-xxhdpi/woe_ic_head_user.png",
  "java/res_wooeen/drawable-xxhdpi/woe_user_menu_item_preferences.png",
  "java/res_wooeen/drawable-xxhdpi/woe_whats.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_no_image_person.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_share.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_user_menu_item_logout.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_widgets_recommendations.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_slide_second.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_cashback_white.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_slide_third.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_advertisers.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_banner_1.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_user_menu_item_blog.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_user_menu_item_my_cashback.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_challenges_white.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_arrow_right_long_white.png",
  "java/res_wooeen/drawable-xxxhdpi/btn_wooeen_off.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_copy.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_filter.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_user_menu_item_company.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_more.png",
  "java/res_wooeen/drawable-xxxhdpi/btn_toolbar_woe.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_copy_white.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_pub_offer_cashback.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_favicon.png",
  "java/res_wooeen/drawable-xxxhdpi/wooeen_logo.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_user_menu_item_share.png",
  "java/res_wooeen/drawable-xxxhdpi/btn_wooeen.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_slide_fourth.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_pub_comment.png",
  "java/res_wooeen/drawable-xxxhdpi/ic_wooeen_chrome.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_widgets_cashback.png",
  "java/res_wooeen/drawable-xxxhdpi/ic_wooeen_push.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_share_purple.png",
  "java/res_wooeen/drawable-xxxhdpi/btn_toolbar_active_woe.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_user_menu_item_tasks.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_close_gray.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_user_menu_item_advertisers.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_close.png",
  "java/res_wooeen/drawable-xxxhdpi/btn_wooeen_donation.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_user_menu_item_next.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_stopwatch_blue.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_user_menu_item_my_data.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_pub_task_tag.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_user_menu_item_pubs.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_search.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_ic_head_company.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_pub_share.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_pub_more.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_arrow_right_long_red.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_widgets_aff.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_share_main.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_widgets_balance.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_arrow_right_long_gray.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_pub_like.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_help_bg.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_user_menu_item_history.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_pub_offer_social.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_whats_button.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_user_menu_item_favorite.png",
  "java/res_wooeen/drawable-xxxhdpi/wooeen_logo_wb.png",
  "java/res_wooeen/drawable-xxxhdpi/wooeen_logo_white.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_advertisers_white.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_menu.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_ic_head_user.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_user_menu_item_preferences.png",
  "java/res_wooeen/drawable-xxxhdpi/woe_whats.png",
  "java/res_wooeen/font/montserrat_semibold.ttf",
  "java/res_wooeen/font/poppins_bold.ttf",
  "java/res_wooeen/font/montserrat_bold.ttf",
  "java/res_wooeen/font/montserrat_regular.ttf",
  "java/res_wooeen/font/poppins_regular.ttf",
  "java/res_wooeen/font/poppins_semibold.ttf",
  "java/res_wooeen/layout/pub_post_item.xml",
  "java/res_wooeen/layout/woe_ntp_header.xml",
  "java/res_wooeen/layout/register_step_4.xml",
  "java/res_wooeen/layout/advertiser_item.xml",
  "java/res_wooeen/layout/register_step_pass.xml",
  "java/res_wooeen/layout/woe_ntp_search.xml",
  "java/res_wooeen/layout/woe_ntp_button.xml",
  "java/res_wooeen/layout/badged_tab.xml",
  "java/res_wooeen/layout/register_step_7.xml",
  "java/res_wooeen/layout/register_step_cr.xml",
  "java/res_wooeen/layout/register_cp_step_6_finish.xml",
  "java/res_wooeen/layout/pub_task_item.xml",
  "java/res_wooeen/layout/woe_ntp_loading.xml",
  "java/res_wooeen/layout/register_step_8.xml",
  "java/res_wooeen/layout/woe_ntp_pub.xml",
  "java/res_wooeen/layout/woe_ntp_banner.xml",
  "java/res_wooeen/layout/register_step_3.xml",
  "java/res_wooeen/layout/woe_dialog_update.xml",
  "java/res_wooeen/layout/post_item.xml",
  "java/res_wooeen/layout/woe_ntp_buttons.xml",
  "java/res_wooeen/layout/login_step_verify.xml",
  "java/res_wooeen/layout/coupon_item.xml",
  "java/res_wooeen/layout/activity_rec_terms_social.xml",
  "java/res_wooeen/layout/dialog_layout.xml",
  "java/res_wooeen/layout/register_step_1.xml",
  "java/res_wooeen/layout/pub_retargeting_item.xml",
  "java/res_wooeen/layout/register_cp_step_3_email.xml",
  "java/res_wooeen/layout/register_cp_step_5_category.xml",
  "java/res_wooeen/layout/woe_ntp_logo.xml",
  "java/res_wooeen/layout/woe_ntp_user_menu_item.xml",
  "java/res_wooeen/layout/register_step_2.xml",
  "java/res_wooeen/layout/woe_ntp_update.xml",
  "java/res_wooeen/layout/pub_coupon_item.xml",
  "java/res_wooeen/layout/task_item.xml",
  "java/res_wooeen/layout/woe_ntp_feed.xml",
  "java/res_wooeen/layout/woe_ntp_widget.xml",
  "java/res_wooeen/layout/country_dialog.xml",
  "java/res_wooeen/layout/offer_item.xml",
  "java/res_wooeen/layout/woe_tag.xml",
  "java/res_wooeen/layout/register_step_5.xml",
  "java/res_wooeen/layout/woe_ntp_empty.xml",
  "java/res_wooeen/layout/register_cp_step_2_name.xml",
  "java/res_wooeen/layout/register_step_6.xml",
  "java/res_wooeen/layout/login_step_email.xml",
  "java/res_wooeen/layout/activity_rec_terms.xml",
  "java/res_wooeen/layout/woe_ntp_searchbox.xml",
  "java/res_wooeen/layout/woe_ntp_user_head.xml",
  "java/res_wooeen/layout/login_step_pass.xml",
  "java/res_wooeen/layout/activity_login.xml",
  "java/res_wooeen/layout/register_cp_step_4_document.xml",
  "java/res_wooeen/layout/woe_area.xml",
  "java/res_wooeen/layout/category_dialog.xml",
  "java/res_wooeen/layout/register_cp_step_1.xml",
  "java/res_wooeen/layout-land/woe_dialog_update.xml",
  "java/res_wooeen/menu/woe_pub_item_menu.xml",
  "java/res_wooeen/menu/woe_user_menu_items.xml",
  "java/res_wooeen/mipmap-anydpi-v26/ic_launcher.xml",
  "java/res_wooeen/mipmap-anydpi-v26/ic_launcher_round.xml",
  "java/res_wooeen/mipmap-hdpi/ic_launcher_foreground.png",
  "java/res_wooeen/mipmap-hdpi/ic_launcher.png",
  "java/res_wooeen/mipmap-hdpi/ic_launcher_round.png",
  "java/res_wooeen/mipmap-mdpi/ic_launcher_foreground.png",
  "java/res_wooeen/mipmap-mdpi/ic_launcher.png",
  "java/res_wooeen/mipmap-mdpi/ic_launcher_round.png",
  "java/res_wooeen/mipmap-xhdpi/ic_launcher_foreground.png",
  "java/res_wooeen/mipmap-xhdpi/ic_launcher.png",
  "java/res_wooeen/mipmap-xhdpi/ic_launcher_round.png",
  "java/res_wooeen/mipmap-xxhdpi/ic_launcher_foreground.png",
  "java/res_wooeen/mipmap-xxhdpi/ic_launcher.png",
  "java/res_wooeen/mipmap-xxhdpi/ic_launcher_round.png",
  "java/res_wooeen/mipmap-xxxhdpi/ic_launcher_foreground.png",
  "java/res_wooeen/mipmap-xxxhdpi/ic_launcher.png",
  "java/res_wooeen/mipmap-xxxhdpi/ic_launcher_round.png",
  "java/res_wooeen/transition/slide_right.xml",
  "java/res_wooeen/transition/fade.xml",
  "java/res_wooeen/values/dimens.xml",
  "java/res_wooeen/values/styles.xml",
  "java/res_wooeen/values/attrs.xml",
  "java/res_wooeen/values/themes.xml",
  "java/res_wooeen/values/colors.xml",
  "java/res_wooeen/values/values_firebase.xml",
  "java/res_wooeen/values-night/themes.xml",
  "java/res_wooeen/values-night/colors.xml",
  "java/res_wooeen/xml/authenticator.xml",
  "java/res_wooeen/xml/syncadapter.xml",
]
